Feat: Update registrant upload endpoint and add additional fields
